--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.4",
     "body-parser": "https://aistudiocdn.com/body-parser@^2.2.0",
     "cors": "https://aistudiocdn.com/cors@^2.8.5",
-    "express": "https://aistudiocdn.com/express@^5.1.0"
+    "express": "https://aistudiocdn.com/express@^5.1.0",
+    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3"
   }
 }
 </script>
