--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@
     "body-parser": "https://aistudiocdn.com/body-parser@^2.2.0",
     "cors": "https://aistudiocdn.com/cors@^2.8.5",
     "express": "https://aistudiocdn.com/express@^5.1.0",
-    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3"
+    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3",
+    "pg": "https://aistudiocdn.com/pg@^8.16.3",
+    "process": "https://aistudiocdn.com/process@^0.11.10"
   }
 }
 </script>
