--- a/index.html
+++ b/index.html
@@ -182,25 +182,9 @@
         text-shadow: 0 0 8px rgba(255, 199, 89, 0.6);
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.4",
-    "body-parser": "https://aistudiocdn.com/body-parser@^2.2.0",
-    "cors": "https://aistudiocdn.com/cors@^2.8.5",
-    "express": "https://aistudiocdn.com/express@^5.1.0",
-    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3",
-    "pg": "https://aistudiocdn.com/pg@^8.16.3",
-    "process": "https://aistudiocdn.com/process@^0.11.10"
-  }
-}
-</script>
 </head>
   <body class="font-sans">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script src="/dist/bundle.js" defer></script>
   </body>
 </html>
