feat: Consolidate express imports and add path
Replaces type-only imports of express with direct imports where appropriate. Adds the 'path' module to frontend dependencies for potential future use. This change cleans up import statements and ensures all necessary modules are accounted for.

--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.4",
     "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3",
     "express": "https://aistudiocdn.com/express@^5.1.0",
-    "cors": "https://aistudiocdn.com/cors@^2.8.5"
+    "cors": "https://aistudiocdn.com/cors@^2.8.5",
+    "path": "https://aistudiocdn.com/path@^0.12.7"
   }
 }
 </script>
