--- a/index.html
+++ b/index.html
@@ -203,6 +203,6 @@
 </head>
   <body class="font-sans">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/dist/bundle.js"></script>
   </body>
 </html>
