feat: Improve modal and page scrolling behavior
Adds smooth scrolling and scroll padding to the HTML element for better navigation.
Adjusts modal positioning to allow scrolling content within modals, addressing potential overflow issues on smaller screens and improving usability.

--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
         --border-highlight: rgba(159, 80, 255, 0.5);
       }
 
+      html {
+        scroll-padding-top: 5rem; /* Offset for sticky header */
+        scroll-behavior: smooth;
+      }
+
       body {
         background-color: var(--bg-primary);
         color: var(--text-primary);
