--- a/index.html
+++ b/index.html
@@ -249,6 +249,6 @@
       <span></span>
     </div>
     <div id="root"></div>
-    <script type="module" src="/dist/bundle.js"></script>
+    <script type="module" src="/dist/index.js"></script>
   </body>
 </html>
